
* Changes in version v0.2.1

Added the -genesis-key option.

* Changes in version v0.2.0

Add support for new CAP-0040 ed25519 signed payloads in protocol 19.
New options -payload, -pack-payload, and -unpack-payload.

* Changes in version v0.1.6

Show/Parse liquidity pool TrustLineAsset as hex string followed by
":lp".

Change OperationID to new HashIDPreimage.

Run generated code through gofmt -s and add CI helper files.

Break STCEDITOR into multiple arguments if it contains spaces.  Don't
include line numbers for visual studio code.

* Changes in version v0.1.5

Fixed ./make-release to avoid putting an unreleased goxdr in go.mod.

* Changes in version v0.1.4

Update -mux and -demux options for new version of SEP-0023.

Added -opid option.

* Changes in version v0.1.3

Changed AllowTrustAsset to AssetCode.

* Changes in version v0.1.2

Added -json option to stc.

* Changes in version v0.1.1

Prefer STCEDITOR environment variable over EDITOR.

Added -z option to clear signature list in stc.

* Initial release v0.1.0